apps/desktop/src-tauri/test_errors.txt
   Compiling spellbook-desktop v0.1.0 (C:\Users\vitki\OneDrive\GitHub\runecalico-ai\second_edition_spellbook\apps\desktop\src-tauri)
error[E0277]: the trait bound `canonical_spell::SourceRef: std::default::Default` is not satisfied
    --> src\commands\import.rs:2270:15
     |
2270 |             ..Default::default()
     |               ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `canonical_spell::SourceRef`
     |
help: consider annotating `canonical_spell::SourceRef` with `#[derive(Default)]`
    -->  src\models\canonical_spell.rs:158:1
     |
 158 + #[derive(Default)]
 159 | pub struct SourceRef {
     |

error[E0277]: the trait bound `canonical_spell::SourceRef: std::default::Default` is not satisfied
    --> src\commands\import.rs:2275:15
     |
2275 |             ..Default::default()
     |               ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `canonical_spell::SourceRef`
     |
help: consider annotating `canonical_spell::SourceRef` with `#[derive(Default)]`
    -->  src\models\canonical_spell.rs:158:1
     |
 158 + #[derive(Default)]
 159 | pub struct SourceRef {
     |

error[E0277]: the trait bound `canonical_spell::SourceRef: std::default::Default` is not satisfied
    --> src\commands\import.rs:2282:15
     |
2282 |             ..Default::default()
     |               ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `canonical_spell::SourceRef`
     |
help: consider annotating `canonical_spell::SourceRef` with `#[derive(Default)]`
    -->  src\models\canonical_spell.rs:158:1
     |
 158 + #[derive(Default)]
 159 | pub struct SourceRef {
     |

error[E0308]: mismatched types
    --> src\commands\import.rs:2290:19
     |
2290 |             book: Some("B1".into()),
     |                   ^^^^^^^^^^^^^^^^^ expected `String`, found `Option<_>`
     |
     = note: expected struct `std::string::String`
                  found enum `std::option::Option<_>`

error[E0277]: the trait bound `canonical_spell::SourceRef: std::default::Default` is not satisfied
    --> src\commands\import.rs:2292:15
     |
2292 |             ..Default::default()
     |               ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `canonical_spell::SourceRef`
     |
help: consider annotating `canonical_spell::SourceRef` with `#[derive(Default)]`
    -->  src\models\canonical_spell.rs:158:1
     |
 158 + #[derive(Default)]
 159 | pub struct SourceRef {
     |

error[E0308]: mismatched types
    --> src\commands\import.rs:2297:19
     |
2297 |             book: Some("B1".into()),
     |                   ^^^^^^^^^^^^^^^^^ expected `String`, found `Option<_>`
     |
     = note: expected struct `std::string::String`
                  found enum `std::option::Option<_>`

error[E0277]: the trait bound `canonical_spell::SourceRef: std::default::Default` is not satisfied
    --> src\commands\import.rs:2299:15
     |
2299 |             ..Default::default()
     |               ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `canonical_spell::SourceRef`
     |
help: consider annotating `canonical_spell::SourceRef` with `#[derive(Default)]`
    -->  src\models\canonical_spell.rs:158:1
     |
 158 + #[derive(Default)]
 159 | pub struct SourceRef {
     |

error[E0308]: mismatched types
    --> src\commands\import.rs:2310:19
     |
2310 |             book: Some("B1".into()),
     |                   ^^^^^^^^^^^^^^^^^ expected `String`, found `Option<_>`
     |
     = note: expected struct `std::string::String`
                  found enum `std::option::Option<_>`

error[E0277]: the trait bound `canonical_spell::SourceRef: std::default::Default` is not satisfied
    --> src\commands\import.rs:2312:15
     |
2312 |             ..Default::default()
     |               ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `canonical_spell::SourceRef`
     |
help: consider annotating `canonical_spell::SourceRef` with `#[derive(Default)]`
    -->  src\models\canonical_spell.rs:158:1
     |
 158 + #[derive(Default)]
 159 | pub struct SourceRef {
     |

error[E0277]: the trait bound `canonical_spell::SourceRef: std::default::Default` is not satisfied
    --> src\commands\import.rs:2327:19
     |
2327 |                 ..Default::default()
     |                   ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `canonical_spell::SourceRef`
     |
help: consider annotating `canonical_spell::SourceRef` with `#[derive(Default)]`
    -->  src\models\canonical_spell.rs:158:1
     |
 158 + #[derive(Default)]
 159 | pub struct SourceRef {
     |

error[E0308]: mismatched types
    --> src\commands\import.rs:2330:23
     |
2330 |                 book: Some("B2".into()),
     |                       ^^^^^^^^^^^^^^^^^ expected `String`, found `Option<_>`
     |
     = note: expected struct `std::string::String`
                  found enum `std::option::Option<_>`

error[E0277]: the trait bound `canonical_spell::SourceRef: std::default::Default` is not satisfied
    --> src\commands\import.rs:2332:19
     |
2332 |                 ..Default::default()
     |                   ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `canonical_spell::SourceRef`
     |
help: consider annotating `canonical_spell::SourceRef` with `#[derive(Default)]`
    -->  src\models\canonical_spell.rs:158:1
     |
 158 + #[derive(Default)]
 159 | pub struct SourceRef {
     |

error[E0308]: mismatched types
    --> src\commands\import.rs:2337:54
     |
2337 |             merge_canonical_metadata(canonical_json, &incoming_tags, &incoming_refs).unwrap();
     |             ------------------------                 ^^^^^^^^^^^^^^ expected `&[String]`, found `&Option<String>`
     |             |
     |             arguments to this function are incorrect
     |
     = note: expected reference `&[std::string::String]`
                found reference `&std::option::Option<std::string::String>`
note: function defined here
    --> src\commands\import.rs:143:4
     |
 143 | fn merge_canonical_metadata(
     |    ^^^^^^^^^^^^^^^^^^^^^^^^
 144 |     existing_canonical_json: &str,
 145 |     incoming_tags: &[String],
     |     ------------------------

error[E0599]: no method named `as_deref` found for struct `std::string::String` in the current scope
    --> src\commands\import.rs:2350:53
     |
2350 |         assert_eq!(merged_spell.source_refs[0].book.as_deref(), Some("B1"));
     |                                                     ^^^^^^^^
     |
help: there is a method `as_ref` with a similar name
     |
2350 -         assert_eq!(merged_spell.source_refs[0].book.as_deref(), Some("B1"));
2350 +         assert_eq!(merged_spell.source_refs[0].book.as_ref(), Some("B1"));
     |

warning: variable does not need to be mutable
   --> src\commands\import.rs:883:9
    |
883 |     let mut warnings = Vec::<String>::new();
    |         ----^^^^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
    --> src\commands\import.rs:2269:19
     |
2269 |             book: Some("B1".into()),
     |                   ^^^^^^^^^^^^^^^^^ expected `String`, found `Option<_>`
     |
     = note: expected struct `std::string::String`
                  found enum `std::option::Option<_>`

error[E0308]: mismatched types
    --> src\commands\import.rs:2274:19
     |
2274 |             book: Some("B2".into()),
     |                   ^^^^^^^^^^^^^^^^^ expected `String`, found `Option<_>`
     |
     = note: expected struct `std::string::String`
                  found enum `std::option::Option<_>`

error[E0308]: mismatched types
    --> src\commands\import.rs:2326:23
     |
2326 |                 book: Some("B1".into()),
     |                       ^^^^^^^^^^^^^^^^^ expected `String`, found `Option<_>`
     |
     = note: expected struct `std::string::String`
                  found enum `std::option::Option<_>`

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `spellbook-desktop` (lib test) generated 1 warning
error: could not compile `spellbook-desktop` (lib test) due to 17 previous errors; 1 warning emitted
